--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
         "Zinkerz"
     ],
     "dependencies": {
-        "infra-web-app": "https://github.com/Knowledge-OTP/infra-web-app.git#oren/new-invitation-3"
+        "infra-web-app": "https://github.com/Knowledge-OTP/infra-web-app.git#v0.0.48"
     },
     "ignore": [
         ".*",
