--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
         "Zinkerz"
     ],
     "dependencies": {
-        "infra-web-app": "https://github.com/Knowledge-OTP/infra-web-app.git#zinkerz/v6"
+        "infra-web-app": "https://github.com/Knowledge-OTP/infra-web-app.git#zinkerz/dev"
     },
     "ignore": [
         ".*",
